name:                HaskRing
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Nicola Bonelli
maintainer:          nicola@pfq.io 
category:            Shell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskring
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Options
                       Paths_HaskRing
  default-language:    Haskell2010
  build-depends:       base >=4.6,
                       filepath,
                       optparse-applicative,
                       time,
                       vector

  ghc-options:         -O2 -Wall  -rtsopts -threaded "-with-rtsopts=-A32m -qm -qn2 -N"

